--- a/production/docker-compose.yml
+++ b/production/docker-compose.yml
@@ -1,15 +1,15 @@
 version: "3.9"
 services:
   app:
-    build: ./infra/php
+    build: ../infra/php
     volumes:
-      - ./src:/data
+      - ../src:/data
 
   web:
     image: nginx:1.20-alpine
     ports:
       - 8080:80
     volumes:
-      - ./src:/data
-      - ./infra/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ../src:/data
+      - ../infra/nginx/default.conf:/etc/nginx/conf.d/default.conf
     working_dir: /data
